[project]
name = "pipeline-parallel-comfy"
description = "provide extra api to run prompt request with parallel execution of independent node"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/DeJoker/pipeline-parallel-comfy"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "pipeline-parallel-comfy"
Icon = ""
